# grove

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  README.md  README_CN.md  TODO.md  design-system.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  configuration.md  hooks.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  cli.rs  config.rs  git.rs  lib.rs  main.rs  models.rs  store.rs  watcher.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  posix.rs  windows.rs
src/assets/launcher-icons/: SOURCES.md
src/components/: Alert.tsx  CreateWorktreeModal.tsx  DeleteExecutionModal.tsx  FormControls.tsx  HooksModal.tsx  ModalShell.tsx  RepoSelector.tsx
src/lib/: api.ts  branch-name-gen.test.ts  branch-name-gen.ts  i18n.tsx  theme.tsx  types.ts  updater.ts
src/locales/: en.ts  types.ts  zh-CN.ts
