[package]
name = "grove"
version = "0.2.0"
description = "Desktop worktree manager built with Tauri"
authors = ["gaoxin"]
edition = "2021"

[lib]
name = "grove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tempfile = "3"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
